Ajustes en secciones internas a 1440px

--- a/equipos.html
+++ b/equipos.html
@@ -243,7 +243,7 @@
                 <section class="proximo-partido">
 
                     <div class="proximo-partido__contenedor">
-                        <img src="../img/lakers.png" alt="Logo Lakers">
+                        <img src="https://hibriddomo.files.wordpress.com/2023/03/lakers-1.png" alt="Logo Lakers">
                         <div class="proximo-partido__resultado">
                             <p class="proximo-partido__puntos">25</p>
                             <div class="proximo-partido__temporizador">
@@ -254,7 +254,7 @@
                             </div>
                             <p class="proximo-partido__puntos">25</p>
                         </div>
-                        <img src="../img/pelicans.png" alt="Logo Pelicans">
+                        <img src="https://hibriddomo.files.wordpress.com/2023/03/pelicans.png" alt="Logo Pelicans">
                     </div>
                     <div class="proximo-partido__botones__contenedor">
                         <a href="#" class="proximo-partido__botones">Ver partido</a>
@@ -312,31 +312,31 @@
                 <div class="mejor-jugador_otros-jugadores__contenedor">
                     <div class="mejor-jugador_otros-jugadores__contenido">
                         <div class="mejor-jugador_otros-jugadores__img">
-                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/ad.png" width="160px" alt="Imagen otros jugadores">
+                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/ad.png"  alt="Imagen otros jugadores">
                         </div>
                         <p>A. Davis</p>
                     </div>
                     <div class="mejor-jugador_otros-jugadores__contenido">
                         <div class="mejor-jugador_otros-jugadores__img">
-                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/rh.png" width="160px" alt="Imagen otros jugadores">
+                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/rh.png"  alt="Imagen otros jugadores">
                         </div>
                         <p>R. Hachimura</p>
                     </div>
                     <div class="mejor-jugador_otros-jugadores__contenido">
                         <div class="mejor-jugador_otros-jugadores__img">
-                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/dr.png" width="160px" alt="Imagen otros jugadores">
+                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/dr.png"  alt="Imagen otros jugadores">
                         </div>
                         <p>D. Rusell</p>
                     </div>
                     <div class="mejor-jugador_otros-jugadores__contenido">
                         <div class="mejor-jugador_otros-jugadores__img">
-                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/ar.png" width="160px" alt="Imagen otros jugadores">
+                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/ar.png"  alt="Imagen otros jugadores">
                         </div>
                         <p>A. Reaves</p>
                     </div>
                     <div class="mejor-jugador_otros-jugadores__contenido">
                         <div class="mejor-jugador_otros-jugadores__img">
-                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/dsaleman.png" width="160px" alt="Imagen otros jugadores">
+                            <img src="https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/dsaleman.png"  alt="Imagen otros jugadores">
                         </div>
                         <p>D. Schroder</p>
                     </div>    
